turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:4: error: value =! is not a member of Int
while (x =! 9) {
         ^